[package]
name = "day_08"
version = "0.1.0"
authors = ["Niels Kristian Hansen Skovmand <niels@physicalcode.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
indoc = "1.0.3"
lazy_static = "1.4.0"
regex = "1"